--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,7 +2,7 @@ name: CMake Multi-Platform Build and Package
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "refactor"]
     tags:
       - 'v*.*.*'
   pull_request:
