--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,27 +7,27 @@ description = "Discord Rich Presence for Plex Media Server"
 license = "MIT"
 
 [dependencies]
-tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
-tokio-util = "0.7"
+tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "time", "macros"] }
+tokio-util = "0.7.18"
 reqwest = { version = "0.12", features = ["json", "stream"] }
 reqwest-eventsource = "0.6"
-futures = "0.3"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-serde_yaml = "0.9"
-discord-rich-presence = "1.0"
-log = "0.4"
-simplelog = "0.12"
-dirs = "5"
-fs2 = "0.4"
-tray-icon = "0.19"
-crossbeam-channel = "0.5"
-image = { version = "0.25", default-features = false, features = ["ico"] }
-open = "5"
-urlencoding = "2"
+futures-util = "0.3.31"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+serde_yml = "0.0.12"
+discord-rich-presence = "1.1"
+log = "0.4.29"
+simplelog = "0.12.2"
+dirs = "6"
+fs2 = "0.4.3"
+tray-icon = "0.21.3"
+crossbeam-channel = "0.5.15"
+image = { version = "0.25.9", default-features = false, features = ["ico"] }
+open = "5.3.3"
+percent-encoding = "2.3.2"
 
 [target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
+windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }
 
 [profile.release]
 opt-level = 3
