--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ percent-encoding = "2.3"
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+gtk = "0.18"
+
 [profile.release]
 opt-level = 3
 lto = true
