--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
 [target.'cfg(target_os = "linux")'.dependencies]
 gtk = "0.18"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+objc2-core-foundation = { version = "0.3", features = ["CFRunLoop", "CFDate"] }
+
 [profile.release]
 opt-level = 3
 lto = true
